[tool.poetry]
name = "pystdf"
version = "2.0.0"
description = "Python module for working with STDF files"
authors = ["Casey Marshall <git@cmars.tech>"]
license = "GPLv2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
